<resources>
    <string name="app_name">Seera Group</string>
    <string name="teskilat">teskilat</string>
    <string name="movie_name">movie_name</string>
    <string name="leorm_ipsom">OverView</string>
    <string name="rating">rating</string>
    <string name="release_date">Release Date : </string>
    <string name="_8_3">8.3</string>
    <string name="_10192_votes">10192 votes</string>
    <string name="language">Language</string>
    <string name="en">En</string>
    <string name="release_date___">Release Date</string>
    <string name="_1977_05_23">1977–05–23</string>
    <string name="message_error">Please check your internet connection</string>
    <string name="image">image</string>
    <string name="Please_wait">Please wait</string>

    <string name="network">Network Error please connect to Internet and try again</string>
    <string name="splash_screen">Splash Screen</string>
    <string name="error_loading_new">Error Loading</string>
    <string name="show_progress" translatable="false">Show progress</string>
    <string name="show_content" translatable="false">Show content</string>
    <string name="show_error" translatable="false">Show error</string>
    <string name="show_empty" translatable="false">Show empty</string>
    <string name="text_sample" translatable="false">Sample Text</string>
    <string name="sample_normal" translatable="false">Normal Sample</string>
    <string name="sample_recycler_view" translatable="false">RecyclerView Sample</string>
    <string name="try_again" translatable="false">Try Again</string>
    <string name="empty">Content not found</string>
    <string name="popular">Popular</string>
    <string name="revenue">Revenue</string>
    <string name="top_rated">Top Rated</string>

</resources>