<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/home_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:title="DETAILS"
        app:navigationIcon="@drawable/ic_baseline_menu_24"
        app:titleTextColor="@color/white" />

<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:fillViewport="true">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".DetailsActivity">


        <ImageView
            android:id="@+id/img_detail"
            android:layout_width="match_parent"
            android:layout_height="480dp"
            android:contentDescription="@string/teskilat"
            android:scaleType="fitXY"
            android:src="@drawable/teskilat"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtTitleDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:text="@string/movie_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_detail" />


        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:dividerColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/txtTitleDetail" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="15dp"
            app:layout_constraintTop_toBottomOf="@id/divider"
            android:baselineAligned="false">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2.5"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txtRating"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/_8_3"
                        android:textColor="@color/white"
                        android:textSize="17sp" />

                    <ImageView
                        android:id="@+id/img_star_symbol"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginStart="5dp"
                        android:layout_marginTop="13dp"
                        android:background="@color/black"
                        android:contentDescription="@string/teskilat"
                        android:src="@drawable/ic_baseline_star_rate_24" />
                </LinearLayout>

                <TextView
                    android:id="@+id/vote_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/_10192_votes"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_star_symbol_langu"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginTop="13dp"
                        android:background="@color/black"
                        android:contentDescription="@string/teskilat"
                        android:src="@drawable/ic_baseline_language_24" />

                    <TextView
                        android:id="@+id/txtLanguage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/en"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/language"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/img_star_symbol_date"
                        android:layout_width="17dp"
                        android:layout_height="17dp"
                        android:layout_marginStart="10dp"
                        android:layout_marginTop="13dp"
                        android:background="@color/black"
                        android:contentDescription="@string/teskilat"
                        android:src="@drawable/ic_baseline_av_timer_24" />

                    <TextView
                        android:id="@+id/release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="6dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/_1977_05_23"
                        android:textColor="@color/white"
                        android:textSize="17sp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:text="@string/release_date___"
                    android:textColor="@color/white"
                    android:textSize="17sp" />

            </LinearLayout>


        </LinearLayout>

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider2"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            app:dividerColor="@color/white"
            app:layout_constraintTop_toBottomOf="@id/linearLayout" />


        <TextView
            android:id="@+id/txtParagraph"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/leorm_ipsom"
            android:textColor="@color/white"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="@id/txtTitleDetail"
            app:layout_constraintStart_toStartOf="@id/txtTitleDetail"
            app:layout_constraintTop_toBottomOf="@id/divider2" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
</LinearLayout>